# Symulacje

./: Symulacje.sln
Symulacje/: Automation.h  CImg.h  CMakeLists.txt  Config.h  Fluids.h  Globals.h  Physics.h  Properties.h  README  Structures.h  Symulacje.vcxproj  Symulacje.vcxproj.filters  Tools.h  UpdateFunctions.h  main.cpp  picopng.h  resource.h
